# ProtoDAQ

./: .gitignore  .gitmodules  CMakeLists.txt  imgui_application_example.cpp  main.cpp  main.cpp.old
include/: ImDAQ.hpp  protodaq_application.hpp  protodaq_common.hpp  protodaq_core.hpp
include/backends/: protodaq_mavlink.hpp  protodaq_udp.hpp
src/: ImDAQ.cpp  protodaq_application.cpp
